--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,11 @@
       "email": "kurabersayap002@gmail.com"
     }
   ],
+  "scripts": {
+    "post-update-cmd": [
+      "php -r \"file_put_contents('vendor/.htaccess', 'Order allow,deny' . PHP_EOL . 'Deny from all');\""
+    ]
+  },
   "autoload": {
     "psr-4": {
       "App\\": "app/"
@@ -16,6 +21,7 @@
   "require": {
     "illuminate/database": "^9.51",
     "vlucas/phpdotenv": "^5.5",
-    "bramus/router": "~1.6"
+    "bramus/router": "~1.6",
+    "twig/twig": "^3.5"
   }
 }
